Adding new 'ExpandableAccordion' subclass that includes viewport scrolling and basic animations

--- a/packages/odo-expandable/demos/index.html
+++ b/packages/odo-expandable/demos/index.html
@@ -84,8 +84,8 @@ new ExpandableGroup(Elements);</code></pre>
         <div class="demo">
           <h2>Group (none expanded)</h2>
           <p>If no "open" class is assigned to an element when instantiated, all targets will remain collapsed</p>
-          <button class="expandable__trigger odo-expandable__trigger--open" data-expandable-trigger="demo-expand-6" data-expandable-group="demo-group-2">Trigger 1</button>
-          <div class="expandable__target" class="expandable__target odo-expandable__target--open" data-expandable-target="demo-expand-6" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          <button class="expandable__trigger" data-expandable-trigger="demo-expand-6" data-expandable-group="demo-group-2">Trigger 1</button>
+          <div class="expandable__target" data-expandable-target="demo-expand-6" data-expandable-group="demo-group-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
@@ -99,6 +99,50 @@ new ExpandableGroup(Elements);</code></pre>
             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
             cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+        </div>
+        <div class="demo">
+          <h2>Animated Accordion</h2>
+          <p></p>
+          <button class="expandable__trigger--animated odo-expandable__trigger--open" data-expandable-animated data-expandable-trigger="demo-expand-9" data-expandable-group="demo-group-3">Trigger 1</button>
+          <div class="expandable__target--animated odo-expandable__target--open" data-expandable-target="demo-expand-9"
+            data-expandable-group="demo-group-3"><div class="expandable-target__inner">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+            cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+            dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+            non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></div>
+          <button class="expandable__trigger--animated" data-expandable-trigger="demo-expand-10" data-expandable-animated data-expandable-group="demo-group-3">Trigger 2</button>
+          <div class="expandable__target--animated" data-expandable-target="demo-expand-10" data-expandable-group="demo-group-3"><div class="expandable-target__inner">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
+          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+          non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing
+          elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+          ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+          dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+          anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+          et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div></div>
+          <button class="expandable__trigger--animated" data-expandable-trigger="demo-expand-11" data-expandable-animated data-expandable-group="demo-group-3">Trigger 3</button>
+          <div class="expandable__target--animated" data-expandable-target="demo-expand-11" data-expandable-group="demo-group-3"><div class="expandable-target__inner">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum
+          dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit
+          amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit
+          in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
+          qui officia deserunt mollit anim id est laborum.</div></div>
         </div>
         <h2>CSS</h2>
         <p>The only CSS needed is to style the <code>odo-expandable__trigger--open</code> and <code>odo-expandable__target--open</code> classes to your need.</p>
@@ -127,6 +171,11 @@ expandableGroup.dispose()</code></pre>
     <script src="../../../node_modules/classlist.js/classList.min.js"></script>
     <script src="../../../node_modules/element-closest/element-closest.js"></script>
     <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
+
+    <!-- Dependencies. -->
+    <script src="../../odo-device/dist/odo-device.js"></script>
+    <script src="../../odo-helpers/dist/odo-helpers.js"></script>
+    <script src="../../odo-window-events/dist/odo-window-events.js"></script>
 
     <!-- Minified Source. -->
     <script src="../dist/odo-expandable.js"></script>
