Adding a light css file for animated accordions and updating appropriate references. Also cleaning up JS files

--- a/packages/odo-expandable/demos/index.html
+++ b/packages/odo-expandable/demos/index.html
@@ -23,7 +23,7 @@
         <p>IE9+ with polyfills.</p>
         <p>To support IE&lt;=11, you will need to add a <code>classList</code> and the <a href="https://www.npmjs.com/package/element-closest"> <code>Element#closest</code></a> polyfills.</p>
         <h3>Dependencies</h3>
-        <p>None</p>
+        <p>Odo Helpers, OdoWindowEvents.</p>
 
         <h2>Markup</h2>
         <p>The only two required pieces are a <code>button</code> element with a <code>data-expandable-trigger="{id}"</code> attribute and any other element with a <code>data-expandable-target="{id}"</code> attribute.</p>
