Update jsdelivr paths to use a range for prism.

--- a/packages/odo-carousel/demos/index.html
+++ b/packages/odo-carousel/demos/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="../css/odo-carousel-theme.css" />
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.4.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 </head>
 
 <body>
@@ -703,7 +703,7 @@ OdoCarousel.template("Today is {{ day }}", {
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-  <script src="https://cdn.jsdelivr.net/prism/1.4.1/prism.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
