--- a/packages/odo-dual-viewer/demos/index.html
+++ b/packages/odo-dual-viewer/demos/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="../css/odo-dual-viewer-theme.css" />
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.5.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 </head>
 
 <body>
@@ -414,7 +414,7 @@ U = upper zone
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-  <script src="https://cdn.jsdelivr.net/prism/1.5.1/prism.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
