--- a/packages/odo-on-swipe/demos/index.html
+++ b/packages/odo-on-swipe/demos/index.html
@@ -8,7 +8,7 @@
   <title>Odo On-Swipe Demo</title>
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.5.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 
   <link rel="stylesheet" href="../../../docs/demo.css" />
   <link rel="stylesheet" href="styles/demo.css" />
@@ -64,7 +64,7 @@
   <script src="../../../node_modules/babel-polyfill/dist/polyfill.min.js"></script>
 
   <!-- Syntax Highlighter -->
-   <script src="https://cdn.jsdelivr.net/prism/1.5.1/prism.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
   <!-- Dependencies. -->
   <script src="../node_modules/tiny-emitter/dist/tinyemitter.min.js"></script>
