--- a/packages/odo-pointer/demos/index.html
+++ b/packages/odo-pointer/demos/index.html
@@ -9,7 +9,7 @@
   <title>Odo Pointer Demo</title>
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.4.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 
   <link rel="stylesheet" href="../../../docs/demo.css" />
   <link rel="stylesheet" href="styles/demo.css" />
@@ -104,7 +104,7 @@
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-  <script src="https://cdn.jsdelivr.net/prism/1.4.1/prism.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
