--- a/packages/odo-reveal/demos/index.html
+++ b/packages/odo-reveal/demos/index.html
@@ -8,7 +8,7 @@
 
   <title>Odo Reveal Demo</title>
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.4.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
   <link rel="stylesheet" href="../../../docs/demo.css" />
   <link rel="stylesheet" href="../../odo-responsive-images/css/odo-responsive-images.css" />
   <link rel="stylesheet" href="styles/demo.css" />
@@ -148,7 +148,7 @@
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-   <script src="https://cdn.jsdelivr.net/prism/1.4.1/prism.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
