--- a/packages/odo-video/demos/index.html
+++ b/packages/odo-video/demos/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../css/odo-video.css" />
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.5.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 
     <!--[if IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/2014.01.31/classList.min.js"></script><![endif]-->
 </head>
@@ -297,7 +297,7 @@ OdoVideo.autoplay.then(handleAutoplay);
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-  <script src="https://cdn.jsdelivr.net/prism/1.5.1/prism.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
