--- a/packages/odo-background-video/demos/index.html
+++ b/packages/odo-background-video/demos/index.html
@@ -9,7 +9,7 @@
   <title>Odo Background Video Demo</title>
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.5.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 
   <link rel="stylesheet" href="../../../docs/demo.css" />
   <link rel="stylesheet" href="styles/demo.css" />
@@ -113,7 +113,7 @@ var image = instance.imageElement; // getter that returns the DOM image element<
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-  <script src="https://cdn.jsdelivr.net/prism/1.5.1/prism.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
