--- a/packages/odo-base-component/demos/index.html
+++ b/packages/odo-base-component/demos/index.html
@@ -9,7 +9,7 @@
   <title>Odo Base Component Demo</title>
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.5.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 
   <link rel="stylesheet" href="../../../docs/demo.css" />
   <link rel="stylesheet" href="styles/demo.css" />
@@ -110,7 +110,7 @@ OdoBaseComponent.breakpoint.current // 'xs', 'sm', 'md', or 'lg'
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-  <script src="https://cdn.jsdelivr.net/prism/1.5.1/prism.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
