--- a/packages/odo-draggable/demos/index.html
+++ b/packages/odo-draggable/demos/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="../css/odo-draggable.css">
 
   <!-- Syntax Highlighter -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/prism/1.4.1/themes/prism.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/prismjs@1/themes/prism.css">
 </head>
 
 <body>
@@ -348,7 +348,7 @@ instance.on(OdoDraggable.EventType.END, function (pointerEvent) {
   <script src="scripts/demo.js"></script>
 
   <!-- Syntax Highlighter -->
-  <script src="https://cdn.jsdelivr.net/prism/1.4.1/prism.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/prismjs@1/prism.js"></script>
 
 </body>
 
